Agrego cambios en index.html para simular conflicto

--- a/index.html
+++ b/index.html
@@ -15,5 +15,31 @@
 			del control de versiones generando ramas ("branching"), mezclándolas
 			("merging") y generando y resolviendo conflictos en el flujo de trabajo.
 		</p>
+
+		<!-- Formulario de ingreso de datos -->
+		<!-- Agrego algunas modificaciones para generar conflicto -->
+		<div>
+			<form id="userForm">
+				<label for="username">Nombre de usuario:</label>
+				<input
+					type="text"
+					id="username"
+					name="username"
+					required
+					placeholder="Usuariasdo"
+				/>
+
+				<label for="password">Contraseña:</label>
+				<input
+					type="password"
+					id="password"
+					name="password"
+					required
+					placeholder="**sasd******"
+				/>
+
+				<button type="submit">Enviar</button>
+			</form>
+		</div>
 	</body>
 </html>
