UI: Modificado placeholder y nombre de campo para simular conflicto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Formulario de ingreso de datos -->
 		<form id="userForm">
 			<label for="username">Nombre de usuario:</label>
-			<input type="text" id="username" name="username" required placeholder="Usuario">
+			<input type="text" id="user_name" name="username" required placeholder="Ingrese su usuario">
 
 			<label for="password">Contraseña:</label>
 			<input type="password" id="password" name="password" required placeholder="********">
