UI: cambio para generar Pull Request

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			("merging") y generando y resolviendo conflictos en el flujo de trabajo.
 		</p>
 
+		<!-- Cambio de la rama feature/perfil-nuevo-ui para el Pull Request -->
 		<!-- Formulario de ingreso de datos -->
 		<form id="userForm">
 			<label for="username">Nombre de usuario:</label>
