UI: placeholders y renombrado de campos (simulación de conflicto)

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
   <form id="loginForm" autocomplete="off">
     <div style="margin-bottom:0.75rem;">
       <label for="username" style="display:block;margin-bottom:0.25rem;">Username</label>
-      <input id="username" name="username" type="text" required placeholder="Enter your username" style="width:100%;padding:0.5rem;">
+      <input id="user" name="user" type="text" required placeholder="Enter your user" style="width:100%;padding:0.5rem;">
     </div>
     <div style="margin-bottom:0.75rem;">
       <label for="password" style="display:block;margin-bottom:0.25rem;">Password</label>
-      <input id="password" name="password" type="password" required placeholder="Enter your password" style="width:100%;padding:0.5rem;">
+      <input id="pwd" name="pwd" type="password" required placeholder="Enter your pass" style="width:100%;padding:0.5rem;">
     </div>
     <button type="submit" style="padding:0.5rem 1rem;cursor:pointer;">Send</button>
   </form>
